--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Cek Khodam Gratis</title>
   </head>
   <body>
+    <div class="image-container">
+      <img src="sam.png" alt="Gambar Khodam" />
+    </div>
     <div class="container">
       <div class="title">
         <h2>Cek Khodam kamu dengan gratis..!</h2>
