--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         <p id="namaKhodam"></p>
       </div>
     </div>
-
+<div class="labelFooter">
+  <p class="labelFooterBody">Created by Samotuho Ndruru</p>
+</div>
     <script src="main.js"></script>
   </body>
 </html>
