--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
         <p id="namaKhodam"></p>
       </div>
     </div>
-
-  
-
+    <footer>Created by Samotuho Ndruru</footer>
     <script src="main.js"></script>
   </body>
 </html>
